<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/onPause1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/OnPause1"
        app:layout_constraintStart_toStartOf="@+id/onResume1"
        app:layout_constraintTop_toBottomOf="@+id/onResume1" />

    <TextView
        android:id="@+id/onStop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/OnStop1"
        app:layout_constraintStart_toStartOf="@+id/onPause1"
        app:layout_constraintTop_toBottomOf="@+id/onPause1" />

    <TextView
        android:id="@+id/onDestroy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/OnDestroy1"
        app:layout_constraintStart_toStartOf="@+id/onStop1"
        app:layout_constraintTop_toBottomOf="@+id/onStop1" />

    <TextView
        android:id="@+id/headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/onCreate1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/OnCreate1"
        app:layout_constraintStart_toStartOf="@+id/headline2"
        app:layout_constraintTop_toBottomOf="@+id/headline2" />

    <TextView
        android:id="@+id/tvCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/counter"
        app:layout_constraintStart_toEndOf="@+id/onCreate1"
        app:layout_constraintTop_toTopOf="@+id/onCreate1" />

    <TextView
        android:id="@+id/tvResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/counter"
        app:layout_constraintStart_toEndOf="@+id/onResume1"
        app:layout_constraintTop_toTopOf="@+id/onResume1" />

    <TextView
        android:id="@+id/tvPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/counter"
        app:layout_constraintStart_toEndOf="@+id/onPause1"
        app:layout_constraintTop_toTopOf="@+id/onPause1" />

    <TextView
        android:id="@+id/onResume1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/OnResume1"
        app:layout_constraintStart_toStartOf="@+id/onCreate1"
        app:layout_constraintTop_toBottomOf="@+id/onCreate1" />

    <TextView
        android:id="@+id/tvStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/counter"
        app:layout_constraintStart_toEndOf="@+id/onStop1"
        app:layout_constraintTop_toTopOf="@+id/onStop1" />

    <TextView
        android:id="@+id/tvDestroy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/counter"
        app:layout_constraintStart_toEndOf="@+id/onDestroy1"
        app:layout_constraintTop_toTopOf="@+id/onDestroy1" />
</androidx.constraintlayout.widget.ConstraintLayout>